--- a/.github/workflows/docs-production-netlify.yml
+++ b/.github/workflows/docs-production-netlify.yml
@@ -35,19 +35,6 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
-      - uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # https://github.com/actions/github-script/releases/tag/v6.3.3
-        id: get-docs-version
-        with:
-          script: return context.ref.match(/^refs\/heads\/prod\-docs\/(\d+\.\d+)$/)[1] ?? '';
-          result-encoding: string
-
-      - name: Validate Docs version
-        run: if [ -z "${{steps.get-docs-version.outputs.result}}" ]; then echo "Docs version is empty"; exit 1; fi
-
-      - name: Docker login into GHCR
-        run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login -u ${GITHUB_ACTOR} --password-stdin https://docker.pkg.github.com
-
       - name: Dependencies
         run: |
           npm ci
@@ -67,4 +54,12 @@ jobs:
       - name: copy docs to the latest
         run: cp -r ../dist/* .
           working-directory: ./docs/tmp
-
+      - name: list files in the repository
+      run: ls ${{ github.workspace }}
+      - name: deploy to Netlify
+        steps:
+          - uses: jsmrcaga/action-netlify-deploy@v2.0.0
+            with:
+              NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+              NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+              build_directory: ./docs/tmp
