--- a/.github/workflows/docs-production-netlify.yml
+++ b/.github/workflows/docs-production-netlify.yml
@@ -60,9 +60,8 @@ jobs:
         run: ls ${{ github.workspace }}
 
       - name: Deploy to Netlify
-        steps:
-          - uses: jsmrcaga/action-netlify-deploy@v2.0.0
-            with:
-              NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-              NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-              build_directory: ./docs/tmp
+        uses: jsmrcaga/action-netlify-deploy@v2.0.0
+        with:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          build_directory: ./docs/tmp
